#*******************************************************************************
# * Copyright (c) 2011 ACIN
# * All rights reserved. This program and the accompanying materials
# * are made available under the terms of the Eclipse Public License v1.0
# * which accompanies this distribution, and is available at
# * http://www.eclipse.org/legal/epl-v10.html
# *
# * Contributors:
# *   Alois Zoitl, Patrick Smejkal
# *    - initial API and implementation and/or initial documentation
# *******************************************************************************/

#add_subdirectory(netos73)
add_subdirectory(netos74)

