#*******************************************************************************
# Copyright (c) 2011 ACIN
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0.
#
# SPDX-License-Identifier: EPL-2.0
# 
# Contributors:
#    Alois Zoitl, Patrick Smejkal
# *    - initial API and implementation and/or initial documentation
# *******************************************************************************/

#add_subdirectory(netos73)
add_subdirectory(netos74)

